# MacroPulse

./: .env.example  .gitignore  AGENT.md  README.md  README_Main_System.md  SPEC_API_Integrations.md  SPEC_Configuration.md  SPEC_Data_Models.md  SPEC_Error_Handling.md  SPEC_Project_Assessment.md  SPEC_Prompt_Templates.md  Spec_Agent_Correlation_Expert.md  Spec_Agent_Data_Analyst.md  Spec_Agent_Editor_In_Chief.md  Spec_Agent_Fed_Watcher.md  Spec_Agent_Prediction_Specialist.md  TODO.md  config.py  error_log.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/agents/: __init__.py  base_agent.py  correlation_agent.py  econ_agent.py  editor_agent.py  fed_agent.py  sentiment_agent.py
src/collectors/: __init__.py  base_collector.py  fred_data.py  market_data.py  polymarket_data.py
src/schema/: __init__.py  models.py
src/utils/: __init__.py  cache.py  formatters.py  logger.py
test_scripts/: test_agents.py  test_collectors.py  test_correlation_agent.py  test_econ_agent.py  test_fed_agent.py  test_sentiment_agent.py  test_utils.py  verify_base_agent.py  verify_correlation_agent.py  verify_econ_agent.py  verify_editor_agent.py  verify_fed_agent.py  verify_main_integration.py  verify_sentiment_agent.py
